Bug 269593 - Wrong ">" sign at attendee list
Summary: Wrong ">" sign at attendee list
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: incidence viewer (show other bugs)
Version: 0.9
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Allen Winter
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-28 09:07 UTC by Andreas Cord-Landwehr
Modified: 2011-11-13 23:33 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments
display bug (9.04 KB, image/png)
2011-03-28 09:07 UTC, Andreas Cord-Landwehr
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Cord-Landwehr 2011-03-28 09:07:23 UTC
Created attachment 58390 [details]
display bug

Version:           0.9 (using KDE 4.6.1) 
OS:                Linux

See attached image. Participants field at event's edit widget containts following line:
   "cordlandwehr@googlemail.com" <cordlandwehr@googlemail.com>

Got this by using KDEPIM with GIT HEAD at 13ccffd5e5bfda1b1c485cd1d782dcc84529c279.

Reproducible: Always




OS: Linux (i686) release 2.6.32-5-686
Compiler: cc
Comment 1 Sergio Martins 2011-03-28 09:21:39 UTC
Allen, do you want to fix this one? Should be somewhere in incidenceformatter.cpp

Those double quotes should be escaped before being inserted into HTML.
Comment 2 Allen Winter 2011-11-13 23:33:08 UTC
Git commit de7978ba8fe5682e7d97e828c1c31c8c30b188d7 by Allen Winter.
Committed on 14/11/2011 at 00:27.
Pushed by winterz into branch 'KDE/4.7'.

in htmlAddMailtoLink(), if the person's name is really an email address
in double-quotes (eg. "allen winter@foo.com" <allen.winter@foo.com>)
then just use the email address as the mailto: path.

BUG: 269593
MERGE: 4.7
(cherry picked from commit a468a043693d419efe421e32513ee6ff5d129339)

M  +5    -1    kcalutils/incidenceformatter.cpp

http://commits.kde.org/kdepimlibs/de7978ba8fe5682e7d97e828c1c31c8c30b188d7