in htmlAddMailtoLink(), if the person's name is really an email address in double-quotes (eg. "allen winter@foo.com" <allen.winter@foo.com>) then just use the email address as the mailto: path.

BUG: 269593
MERGE: 4.7
(cherry picked from commit a468a043693d419efe421e32513ee6ff5d129339)